testsuite/poke.pkl/cast-diag-10.pk
/* { dg-do compile } */

var a = 10 as offset<int<32>,B>; /* { dg-error "invalid cast" } */
